the_project/manifests/todo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: project-files
          persistentVolumeClaim:
            claimName: project-pvc
      containers:
        - name: todo-app
          image: davidsboteron/todo-app:5
          volumeMounts:
            - name: project-files
              mountPath: /usr/src/app/files
