the_project/manifests/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
