the_project/manifests/todo-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres-svc
  namespace: project
  labels:
    app: todo-postgres
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: todo-postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-postgres-ss
  namespace: project
spec:
  serviceName: todo-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: todo-postgres
  template:
    metadata:
      labels:
        app: todo-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18.0
          resources:
            requests:
              cpu: 25m
              memory: 96Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
